--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ node_js:
 
 addons:
     code_climate:
-        repo_token: a80533b6bec6be2c2fdf530b3ffcae409eb4603eabfeba0d9b102f26426979c9
+        repo_token: a
 
 after_script:
   - codeclimate-test-reporter < ./coverage/lcov.info
