--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ node_js:
 
 addons:
     code_climate:
-        repo_token: a
+        repo_token: 935a44ecd02fe4e201f2d689ce91857a6d07a857a1ad4ef4508847778fd8555d
 
 after_script:
   - codeclimate-test-reporter < ./coverage/lcov.info
