--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.8",
   "description": "mazaid CheckTask DTO",
   "main": "index.js",
+  "files": ["index.js", "src"],
   "scripts": {
     "docs": "rm -rf ./docs && ./node_modules/.bin/jsdoc ./ -c ./.jsdoc.json --verbose && open ./docs/index.html",
     "tests": "./node_modules/.bin/mocha ./test/",
