userAnalyzeFn field and validation

--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
   },
   "homepage": "https://github.com/mazaid/exec-task#readme",
   "dependencies": {
+    "esprima": "^3.1.0",
     "joi": "^9.0.4",
     "mazaid-error": "^0.2.1"
   },
   "devDependencies": {
     "chai": "3.5.0",
+    "chai-as-promised": "^6.0.0",
     "chai-json-schema": "git+https://github.com/chaijs/chai-json-schema.git",
     "codeclimate-test-reporter": "^0.3.3",
     "ink-docstrap": "^1.2.1",
